--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    //<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-    <title>My Web Page!</title>
+    <body style="background-color:black;"></body>
+    <link type="text/css" rel="stylesheet" href="style.css" media="screen" />
+    <title>Test Page</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <link type="text/css" rel="stylesheet" href="style.css" media="screen" />
+    <h1>Welcome. Please login to continue.</h1>
+    <script type="text/javascript" src="https://c1hbm108.caspio.com/dp/4e20b00078a74a894ff84191a0cd/emb"></script>
+    <button onClick="window.location.reload();  ">Press Login then this to login."</button>
+    <p>For use with select schools.</p>
+    <p>2022 Copyright</p>
   </body>
 </html>
