--- a/account.html
+++ b/account.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    //<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+    <body style="background-color:black;"></body>
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
     <title>Test Page</title>
   </head>
   <body>
