--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <link type="text/css" rel="stylesheet" href="style.css" media="screen" />
     <h1>Welcome. Please login to continue.</h1>
-    <script type="text/javascript" src="https://c1hbm108.caspio.com/dp/4e20b00078a74a894ff84191a0cd/emb"></script>
-    <button onClick="window.location.reload();  ">Press Login then this to login."</button>
+    <div align=center><script type="text/javascript" src="https://c1hbm108.caspio.com/dp/4e20b00078a74a894ff84191a0cd/emb"></script></div>
+    <div align=center><button onClick="window.location.reload();  ">Press Login then this to login.</button></div>
     <p>For use with select schools.</p>
     <p>2022 Copyright</p>
   </body>
