--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <body>
     <link type="text/css" rel="stylesheet" href="style.css" media="screen" />
     <h1>Welcome. Please login to continue.</h1>
-    <div align=center><script type="text/javascript" src="https://c1hbm108.caspio.com/dp/4e20b00078a74a894ff84191a0cd/emb"></script></div>
-    <div align=center><button onClick="window.location.reload();  ">Press Login then this to login.</button></div>
+    <div align=center><script type="text/javascript" src="https://c1hbm108.caspio.com/dp/4e20b00028f05d51c95b412d954b/emb"></script></div>
+    <div align=center><p>If login does not work press the button below.</p></div>
+    <div align=center><button onClick="window.location.reload();  ">Login.</button></div>
     <p>For use with select schools.</p>
     <p>2022 Copyright</p>
   </body>
