--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div align=center><script type="text/javascript" src="https://c1hbm108.caspio.com/dp/4e20b00028f05d51c95b412d954b/emb"></script></div>
     <div align=center><p>If login does not work press the button below.</p></div>
     <div align=center><button onClick="window.location.reload();  ">Login.</button></div>
+    <div align=center><a href="signup.html"><button>Sign Up</button></a></div>
     <p>For use with select schools.</p>
     <p>2022 Copyright</p>
   </body>
