--- a/adminaccount.html
+++ b/adminaccount.html
@@ -3,15 +3,15 @@
   <head>
     <body style="background-color:black;"></body>
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-    <title>Test Page</title>
+    <title>Teacher Dashboard</title>
   </head>
   <body>
-    <h4>My Admin Account</h4>
-    <div align=center><script type="text/javascript" src="https://c1hbm108.caspio.com/dp/4E20B00078a74a894ff84191a0cd/emb"></script></div>
-    <div align=center><script type="text/javascript" src="https://c1hbm108.caspio.com/dp/4e20b000b5210849e874433b91f6/emb"></script></div>
-    <div align=center><script type="text/javascript" src="https://c1hbm108.caspio.com/dp/4e20b000eb5f7aee964b4404b4ab/emb"></script></div>
-    <div align=center><a href="index.html"><button>Go To Login</button></a></div>
-    <p>For use with select schools.</p>
-    <p>2022 Copyright</p>
+    <div class="jpHeadC" align="center"><h4>Teacher Dashboard</h4></div>
+    <div class="jpCC" align=center><script type="text/javascript" src="https://c1hbm108.caspio.com/dp/4e20b000b5210849e874433b91f6/emb"></script>
+    <a href="index.html"><button>Go To Login</button></a>
+    <a href="passwordreset.html"><button>Reset Password</button></a></div>
+    <div align="center"><a href="addmoney.html"><button>Add Money</button></a></div>
+    <div class="jpHeadC" align="center"><p>For use with select schools.</p>
+    <p>2022 Copyright</p></div>
   </body>
 </html>
