--- a/account.html
+++ b/account.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+    <title>Student Dashboard</title>
   </head>
   <body>
-    <h4>My Student Account</h4>
-    <div align=center><script type="text/javascript" src="https://c1hbm108.caspio.com/dp/4E20B00078a74a894ff84191a0cd/emb"></script></div>
+    <h4>Student Dashboard</h4>
     <div align=center><script type="text/javascript" src="https://c1hbm108.caspio.com/dp/4e20b000b5210849e874433b91f6/emb"></script></div>
     <div align=center><a href="index.html"><button>Go To Login</button></a></div>
+    <div align=center><a href="passwordreset.html"><button>Reset Password</button></a></div>
     <p>For use with select schools.</p>
     <p>2022 Copyright</p>
   </body>
